* vm_dump.c (backtrace): use rip in the saved context for the case   the SIGSEGV is received when the process is in userland.   Note that ip in the stack should be used if the signal is received   when it is in kernel (when it is calling syscall) [Bug #12711]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@56030 b2dd03c8-39d4-4d8f-98ff-823fe69b080e